// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionConfirmationRoute should render 1`] = `
<EditorLayout
  logic={true}
  preview={true}
  title="My first displayname"
>
  <Panel>
    <DeleteConfirmDialog
      alertText="All edits will be removed."
      data-test="delete-question-confirmation"
      icon="SvgrURL"
      isOpen={false}
      onClose={[Function]}
      onDelete={[Function]}
      title="My first displayname"
    />
    <EditorToolbar__Toolbar>
      <EditorToolbar__Buttons>
        <IconButtonDelete
          data-test="btn-delete"
          disabledIcon={false}
          hideText={false}
          iconText="Delete"
          onClick={[Function]}
        >
          Delete
        </IconButtonDelete>
      </EditorToolbar__Buttons>
    </EditorToolbar__Toolbar>
    <withValidationError(Connect(withEntityEditor(UnwrappedEditor)))
      confirmation={
        Object {
          "displayName": "My first displayname",
          "id": "1",
          "negative": Object {
            "description": "Negative description",
            "id": "2",
            "label": "Negative label",
            "validationErrorInfo": Array [],
          },
          "page": Object {
            "answers": Array [],
            "displayName": "My question",
            "id": "1",
          },
          "positive": Object {
            "description": "Positive description",
            "id": "1",
            "label": "Positive label",
            "validationErrorInfo": Array [],
          },
          "qCode": "",
          "title": "My first confirmation",
        }
      }
      data-test="editor"
      enableValidationMessage={true}
      onUpdate={[MockFunction]}
    />
  </Panel>
</EditorLayout>
`;

exports[`QuestionConfirmationRoute should show error info when there is an error 1`] = `
<EditorLayout
  logic={true}
  preview={true}
  title="My first displayname"
>
  <Panel>
    <Error>
      Oh no! Something went wrong
    </Error>
  </Panel>
</EditorLayout>
`;

exports[`QuestionConfirmationRoute should show loading info when loading 1`] = `
<EditorLayout
  logic={true}
  preview={true}
  title="My first displayname"
>
  <Panel>
    <Loading
      height="100%"
    >
      Confirmation is loading...
    </Loading>
  </Panel>
</EditorLayout>
`;
